<resources>

    <string name="app_name">FileKing</string>
		<string name="menu_settings">Settings</string>
		<string name="name">Name</string>
		<string name="type">Type</string>
		<string name="size">Size</string>
		<string name="date">Date</string>
		<string name="newfolder">New Folder</string>
		<string name="download_file">Download File</string>
		<string name="downloading_file">Downloading File</string>
		<string name="file_path">File Path</string>
		<string name="upload_file">Upload File</string>
		<string name="file_name">File Name</string>
		<string name="logout">Logout</string>
</resources>