<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="top"
    tools:context=".MainActivity" >

    <TabHost
        android:id="@android:id/tabhost"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:clickable="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TabWidget
                android:id="@android:id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

            </TabWidget>

            <FrameLayout
                android:id="@android:id/tabcontent"
                android:layout_width="match_parent"
                android:layout_height="match_parent" >

                <LinearLayout
                    android:id="@+id/manager"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp"
                        android:text="Enter download filename here"
                        android:textAppearance="?android:attr/textAppearanceSmall" />

                    <EditText
                        android:id="@+id/download_path"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10" >

                        <requestFocus />
                    </EditText>

                    <Button
                        android:id="@+id/btndownload"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Download File" />

                    <Button
                        android:id="@+id/chooser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Choose File to Upload" />

                    <Button
                        android:id="@+id/btnupload"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="Upload File" />

                    <TextView
                        android:id="@+id/upload_pathname"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:text="Selected Upload Filename: " />

                    <Button
                        android:id="@+id/server"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="View Server Contents" />

                    <TextView
                        android:id="@+id/current_dir"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Current Directory: " />

                    <Button
                        android:id="@+id/btnLogout"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="60dp"
                        android:background="@null"
                        android:gravity="bottom|center_vertical|center_horizontal"
                        android:text="Logout"
                        android:textColor="#000000"
                        android:textSize="20dip"
                        android:textStyle="bold" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/viewer"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="top"
                    tools:context=".MainActivity" >

                    <ImageView
                        android:id="@+id/line1"
                        android:layout_width="1dp"
                        android:layout_height="250dp"
                        android:layout_alignParentBottom="true"
                        android:layout_toLeftOf="@+id/line2"
                        android:scaleType="centerCrop"
                        android:src="@android:color/black"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/line2"
                        android:layout_width="225dp"
                        android:layout_height="1dp"
                        android:layout_above="@+id/line1"
                        android:layout_alignParentRight="true"
                        android:scaleType="centerCrop"
                        android:src="@android:color/black"
                        tools:ignore="ContentDescription" />

                    <ImageView
                        android:id="@+id/line3"
                        android:layout_width="1dp"
                        android:layout_height="1dp"
                        android:layout_alignTop="@+id/line2"
                        android:layout_toLeftOf="@+id/line2"
                        android:scaleType="centerCrop"
                        android:src="@android:color/black"
                        tools:ignore="ContentDescription" />

                    <Button
                        android:id="@+id/name"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/line1"
                        android:layout_alignLeft="@+id/line1"
                        android:text="@string/name" />

                    <Button
                        android:id="@+id/type"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/line1"
                        android:layout_toRightOf="@+id/name"
                        android:text="@string/type" />

                    <Button
                        android:id="@+id/size"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/line1"
                        android:layout_toRightOf="@+id/type"
                        android:text="@string/size" />

                    <Button
                        android:id="@+id/date"
                        style="?android:attr/buttonStyleSmall"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/line1"
                        android:layout_toRightOf="@+id/size"
                        android:text="@string/date" />

                    <Button
                        android:id="@+id/newfolder"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_above="@+id/line1"
                        android:layout_toLeftOf="@+id/line3"
                        android:text="@string/newfolder" />

                    <ListView
                        android:id="@+id/files"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/line2"
                        android:layout_alignParentBottom="true"
                        android:layout_alignTop="@+id/line1"
                        android:visibility="visible"
                        tools:listitem="@android:layout/simple_list_item_1" >
                    </ListView>

                    <ListView
                        android:id="@+id/folders"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignLeft="@+id/newfolder"
                        android:layout_alignParentBottom="true"
                        android:layout_alignTop="@+id/files"
                        android:layout_toLeftOf="@+id/files"
                        tools:listitem="@android:layout/simple_list_item_1" >
                    </ListView>
                </RelativeLayout>

            </FrameLayout>

        </LinearLayout>
    </TabHost>

</RelativeLayout>